css/style.css
p {
	font-size: 1.25em;
	font-family: "Share Tech Mono", "Menlo", fixed;
}

a {
	font-size: 1em;
	color: #ec5e50;
	font-family: "Share Tech Mono", "Menlo", fixed;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

h1 {
	font-size: 2em;
	font-family: 'Fenix', serif;
}

h2 {
	font-size: 1.5em;
	font-family: 'Fenix', serif;
	border-bottom: 2px solid black;
	margin-bottom: 30px;
}

#nav-bar {
	width: 100%;
	height: 60px;
	top: 0;
	padding: 20px 20px 20px 20px;
	background-color: #ec5e50;
	position: fixed;
}

#nav-bar h1 {
	color: white;
	font-size: 2.5em;
	margin: 20px 0 0 2%;
	float: left;
}

ul.nav-menu {
	list-style: none;
	margin: 35px 2% 0 0;
	float: right;
	display: inline;
}

ul.nav-menu li {
	float: left;
	margin-right: 40px;
}

ul.nav-menu li a {
	font-size: 1.25em;
	color: white;
}


#center-box {
	width: 60%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 180px;
}


#intro-img {
	width: 45%;
	height: 45%;
	border-radius: 100%;
	float: left;
	display: block-inline;
}

#intro-text {
	height: 45%;
	width: 45%;
	margin-left: 10px;
	float: right;
	display: block-inline;
}

.review-img {
	width: 100%;
	margin-bottom: 
}

#schema {
	margin-right: auto;
	margin-left: auto;
	width: 20%;
	display: block;
	margin-top: 20px;
	margin-bottom: 30px;
	border: 2px solid black;
}


/*-----MEDIA QUERIES-----*/

/* Medium resolution */
@media screen and (max-width: 784px) {

	#nav-bar {
		height: 40px;
	}

	#nav-bar h1 {
		display: none;
	}

	ul.nav-menu {
		width: 440px;
		float: left;
		margin-top: 10px;
		display: block;
	}

	ul.nav-menu li {
		float: left;
		margin-right: 30px;
	}

	#center-box {
		width: 80%;
		margin-left: auto;
		margin-right: auto;
		margin-top: 140px;
	}

	#intro-img {
		width: 80%;
		margin-right: 10%;
		margin-left: 10%;
		display: block;
	}

	#intro-text {
		width: 100%;
		display: block;
	}

}

/* Small resolution */
@media screen and (max-width: 500px) {

	ul.nav-menu {
		width: 300px;
		margin-right: 15.6%;
		margin-left: 15.6%;
		margin-top: 10px;
		display: block;
	}
}

